Spring boot config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/newtapp
+spring.datasource.username=optimisicnewt
+spring.datasource.password=newtdb
