--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
             <artifactId>json-simple</artifactId>
             <version>4.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
