--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,8 @@ cmake-build-*/
 
 # IntelliJ
 out/
+.idea
+*.iml
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
@@ -88,3 +90,6 @@ fabric.properties
 
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
+
+# Apache Maven
+target
