--- a/src/front-end/package.json
+++ b/src/front-end/package.json
@@ -6,7 +6,10 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "jwt-decode": "^3.1.2",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
